complete fixes on mobile

--- a/style/_events.scss
+++ b/style/_events.scss
@@ -31,11 +31,14 @@
 		margin-right: 50px;
 		font-weight: 700;
 		text-decoration: none;
-		-webkit-transition: transform .5s;
-		transition: transform .5s;
+        span {
+            display: inline-block;
+            -webkit-transition: transform .5s;
+            transition: transform .5s;
+        }
 	}
 	//sliding animation
-	a:hover {
-		@include moving(20px);
+	a:hover span{
+        @include moving(20px);
 	}
 }
